--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "author": "Nataly Carbonell",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "redis": "^2.8.0",
     "shortid": "^2.2.13"
-  },
-  "devDependencies": {}
+  }
 }
