--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "node ./node_modules/mocha/bin/mocha"
+    "test": "node ./node_modules/mocha/bin/mocha tests/**/*spec.js"
   },
   "author": "Nataly Carbonell",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^6.1.0",
+    "expect": "^23.6.0",
     "express": "^4.16.4",
     "redis": "^2.8.0"
   },
