--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^6.1.0",
+    "ejs": "^2.6.1",
     "expect": "^23.6.0",
     "express": "^4.16.4",
     "redis": "^2.8.0"
